--- a/index.html
+++ b/index.html
@@ -19,5 +19,9 @@
             <h1>Programming Code Examples</h1>
         </div>
     </main>
+    <footer>
+        Challenge by <a href="https://www.frontendmentor.io/profile/GitHub-dev12345" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="https://github.com/GitHub-dev12345">Dev Rathore</a>.
+    </footer>
 </body>
 </html>
